--- a/.github/workflows/brave_analysis.yml
+++ b/.github/workflows/brave_analysis.yml
@@ -78,3 +78,9 @@ jobs:
       with:
         name: ghidra_analysis
         path: ProjectBrave/
+
+    - name: Create artifact for json file
+        uses: actions/upload-artifact@v2
+        with:
+          name: ghidra_analysis_json
+          path: ProjectBrave/*.json
