--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "<3.10,>=3.7"
 PeachPy = { git = "https://github.com/Maratyszcza/PeachPy" }
 PySimpleGUI = "<5, >=4.32.1"
 appdirs = ">=1.4.4"
+psutil = ">=5.8.0, <6.0.0"
 
 [tool.poetry.scripts]
 bravepatcher = "bravepatcher.main:main"
