--- a/.github/workflows/brave_analysis.yml
+++ b/.github/workflows/brave_analysis.yml
@@ -35,6 +35,7 @@ jobs:
     - name: Run Poetry
       run: |
             python -m poetry install
+            python -m poetry run python generate_static_data.py
             python -m poetry build
 
     - name: Setup ghidra
