--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -51,7 +51,7 @@ jobs:
       run: poetry run python -m nuitka --onefile --show-progress --show-modules --include-module=PySimpleGUI --plugin-enable=tk-inter --windows-company-name=Maxisoft --windows-product-version=0.1.0.0 --msvc=16.8 --follow-imports --recurse-all --assume-yes-for-downloads bravepatcher/gui.py
 
     - name: Buid cli.exe using nuitka
-      run: poetry run python -m nuitka --onefile --include-module=PySimpleGUI --plugin-enable=tk-inter --windows-company-name=Maxisoft --windows-product-version=0.1.0.0 --msvc=16.8 --follow-imports --recurse-all --assume-yes-for-downloads bravepatcher/cli.py
+      run: poetry run python -m nuitka --onefile --include-module=PySimpleGUI --windows-company-name=Maxisoft --windows-product-version=0.1.0.0 --msvc=16.8 --follow-imports --recurse-all --assume-yes-for-downloads bravepatcher/cli.py
 
     - name: Build exe using pyinstaller
       run: poetry run pyinstaller bravepatcher/gui.py
