--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -47,11 +47,15 @@ jobs:
     - name: Install nuitka & pyinstaller
       run: poetry run python -m pip install nuitka pyinstaller pywin32
 
+    - name: Download brave.ico
+      run: Invoke-WebRequest https://raw.githubusercontent.com/brave/brave-core/master/app/theme/brave/win/brave.ico -OutFile brave.ico
+      shell: pwsh
+
     - name: Buid gui.exe using nuitka
-      run: poetry run python -m nuitka --onefile --show-progress --show-modules --include-module=PySimpleGUI --plugin-enable=tk-inter --windows-company-name=Maxisoft --windows-product-version=0.1.0.0 --msvc=16.8 --follow-imports --recurse-all --assume-yes-for-downloads bravepatcher/gui.py
+      run: poetry run python -m nuitka --onefile --show-progress --show-modules --include-module=PySimpleGUI --plugin-enable=tk-inter --windows-company-name=Maxisoft --windows-product-version=0.1.0.0 --msvc=16.8 --follow-imports --recurse-all --assume-yes-for-downloads --windows-product-name=BravePatcherGui --windows-icon-from-ico=brave.ico --windows-file-description="Patch Brave Browser" bravepatcher/gui.py
 
     - name: Buid cli.exe using nuitka
-      run: poetry run python -m nuitka --onefile --include-module=PySimpleGUI --windows-company-name=Maxisoft --windows-product-version=0.1.0.0 --msvc=16.8 --follow-imports --recurse-all --assume-yes-for-downloads bravepatcher/cli.py
+      run: poetry run python -m nuitka --onefile --include-module=PySimpleGUI --windows-company-name=Maxisoft --windows-product-version=0.1.0.0 --msvc=16.8 --follow-imports --recurse-all --assume-yes-for-downloads --windows-product-name=BravePatcherGui --windows-icon-from-ico=brave.ico bravepatcher/cli.py
 
     - name: Build exe using pyinstaller
       run: poetry run pyinstaller bravepatcher/gui.py
