Fixed brave_analysis action

--- a/.github/workflows/brave_analysis.yml
+++ b/.github/workflows/brave_analysis.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Setup ghidra
         run: |
-          Invoke-WebRequest "https://ghidra-sre.org/ghidra_9.2.1_PUBLIC_20201215.zip" -OutFile "ghidra.zip"
+          Invoke-WebRequest "https://ghidra-sre.org/ghidra_9.2.2_PUBLIC_20201229.zip" -OutFile "ghidra.zip"
           Expand-Archive -LiteralPath "ghidra.zip" -DestinationPath .
           Move-Item -Force -Path ghidra_*_PUBLIC -Destination ghidra
         shell: pwsh
@@ -85,14 +85,6 @@ jobs:
         shell: pwsh
         timeout-minutes: 5
 
-
-      - name: Debug event_name
-        run: |
-          echo ${{ github.event_name }}
-          echo ${{ github.event_name != 'schedule' }} || ${{ env.ALREADY_ANALYSED != '1' }}
-          echo ${{ github.event_name != 'schedule' || env.ALREADY_ANALYSED != '1' }}
-
-
       - name: Start Ghidra Analysis
         if: ${{ github.event_name != 'schedule' || env.ALREADY_ANALYSED != '1' }}
         run: |
@@ -106,7 +98,8 @@ jobs:
         if: ${{ github.event_name != 'schedule' || env.ALREADY_ANALYSED != '1' }}
         run: |
           $env:EXTRACT_DIRECTORY = $((Get-Item "ProjectBrave").FullName)
-          ghidra/support/analyzeHeadless "$((Get-Item ProjectBrave).FullName)" brave -process chrome.dll -noanalysis -overwrite -scriptPath "$((Get-Item scripts).FullName)" -postScript extract_functions_patterns.py
+          cp -Force scripts/extract_functions_patterns.py .
+          ghidra/support/analyzeHeadless "$((Get-Item ProjectBrave).FullName)" brave -process chrome.dll -noanalysis -overwrite -scriptPath "$((Get-Item .).FullName)" -postScript extract_functions_patterns.py
         shell: pwsh
         timeout-minutes: 360
 
