--- a/.github/workflows/brave_analysis.yml
+++ b/.github/workflows/brave_analysis.yml
@@ -20,14 +20,14 @@ jobs:
         with:
           python-version: 3.x
 
-      - name: Setup pip cache
+      - name: Setup pypoetry cache
         uses: actions/cache@v2
         timeout-minutes: 5
         with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}${{ hashFiles('**/pyproject.toml') }}
+          path: ~/AppData/Local/pypoetry/Cache
+          key: ${{ runner.os }}-pypoetry-${{ hashFiles('**/requirements.txt') }}${{ hashFiles('**/pyproject.toml') }}
           restore-keys: |
-            ${{ runner.os }}-pip-
+            ${{ runner.os }}-pypoetry-
 
       - name: Install poetry & others
         run: python -m pip install poetry requests wheel
