--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,14 @@ pytest-cov = "^2.11.1"
 pytest-xdist = "^2.2.0"
 pytest-integration = "^0.2.2"
 pefile = "^2019.4.18"
+flake8 = "^3.8.4"
+flake8-bugbear = "^20.11.1"
+flake8-isort = "^4.0.0"
+flake8-pep3101 = "^1.3.0"
+flake8-fixme = "^1.1.1"
+flake8-mutable = "^1.2.0"
+bandit = "^1.7.0"
+mypy = "^0.800"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
