--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -84,7 +84,7 @@ jobs:
 
     - name: Create Release
       id: create_release
-      if: ${{ github.ref }} && true
+      if: startsWith(github.ref, 'refs/tags/v')
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -95,7 +95,7 @@ jobs:
         prerelease: false
 
     - name: Upload GUI Release Asset
-      if: ${{ github.ref }} && true
+      if: startsWith(github.ref, 'refs/tags/v')
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -106,7 +106,7 @@ jobs:
         asset_content_type: "application/octet-stream"
 
     - name: Upload CLI Release Asset
-      if: ${{ github.ref }} && true
+      if: startsWith(github.ref, 'refs/tags/v')
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -117,7 +117,7 @@ jobs:
         asset_content_type: "application/octet-stream"
 
     - name: Upload WHL Release Asset
-      if: ${{ github.ref }} && true
+      if: startsWith(github.ref, 'refs/tags/v')
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
