--- a/.github/workflows/brave_analysis.yml
+++ b/.github/workflows/brave_analysis.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Setup ghidra
         run: |
-          Invoke-WebRequest "https://ghidra-sre.org/ghidra_9.2.2_PUBLIC_20201229.zip" -OutFile "ghidra.zip"
+          Invoke-WebRequest "https://github.com/NationalSecurityAgency/ghidra/releases/download/Ghidra_10.0.4_build/ghidra_10.0.4_PUBLIC_20210928.zip" -OutFile "ghidra.zip"
           Expand-Archive -LiteralPath "ghidra.zip" -DestinationPath .
           Move-Item -Force -Path ghidra_*_PUBLIC -Destination ghidra
         shell: pwsh
