--- a/.github/workflows/brave_analysis.yml
+++ b/.github/workflows/brave_analysis.yml
@@ -20,6 +20,11 @@ jobs:
         with:
           python-version: 3.x
 
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
       - name: Setup pypoetry cache
         uses: actions/cache@v2
         timeout-minutes: 5
