--- a/.github/workflows/brave_analysis.yml
+++ b/.github/workflows/brave_analysis.yml
@@ -95,7 +95,17 @@ jobs:
         run: |
           $dll = (Get-Item $env:BRAVE_DLL).FullName
           mkdir ProjectBrave
-          ghidra/support/analyzeHeadless "$((Get-Item ProjectBrave).FullName)" brave -import "$dll" -analysisTimeoutPerFile $(5 * 60 * 60)
+          $ProgressPreference = 'SilentlyContinue'
+          ghidra/support/analyzeHeadless "$((Get-Item ProjectBrave).FullName)" brave -import "$dll" -analysisTimeoutPerFile $(5 * 60 * 60) -max-cpu $($(Get-ComputerInfo -Property CsProcessors).CsProcessors.NumberOfCores * 2) -overwrite
+        shell: pwsh
+        timeout-minutes: 360
+        
+      - name: Continue Ghidra Analysis
+        if: ${{ github.event_name != 'schedule' || env.ALREADY_ANALYSED != '1' }}
+        run: |
+          $dll = (Get-Item $env:BRAVE_DLL).FullName
+          mkdir ProjectBrave
+          ghidra/support/analyzeHeadless "$((Get-Item ProjectBrave).FullName)" brave -process chrome.dll -analysisTimeoutPerFile $(5 * 60 * 60) -max-cpu $($(Get-ComputerInfo -Property CsProcessors).CsProcessors.NumberOfCores) -overwrite
         shell: pwsh
         timeout-minutes: 360
 
