--- a/.github/workflows/brave_analysis.yml
+++ b/.github/workflows/brave_analysis.yml
@@ -6,13 +6,13 @@ on:
   schedule:
     - cron: '11 */8 * * *'
 jobs:
-  analysis-windows-x64:
+  start-analysis-windows-x64:
     runs-on: windows-latest
+    timeout-minutes: 1200
 
     steps:
       - uses: actions/checkout@v2
         timeout-minutes: 1
-
 
       - name: Set up Python 3
         uses: actions/setup-python@v2
@@ -59,7 +59,6 @@ jobs:
         shell: pwsh
         timeout-minutes: 5
 
-
       - name: Locate brave dll
         run: |
           $dll = Get-Childitem -Path "$env:LOCALAPPDATA/BraveSoftware" -Include chrome.dll -Recurse -ErrorAction SilentlyContinue | select -expand fullname
@@ -96,33 +95,112 @@ jobs:
           $dll = (Get-Item $env:BRAVE_DLL).FullName
           mkdir ProjectBrave
           $ProgressPreference = 'SilentlyContinue'
-          ghidra/support/analyzeHeadless "$((Get-Item ProjectBrave).FullName)" brave -import "$dll" -analysisTimeoutPerFile $(4 * 60 * 60) -max-cpu $($(Get-ComputerInfo -Property CsProcessors).CsProcessors.NumberOfCores * 2) -overwrite
+          ghidra/support/analyzeHeadless "$((Get-Item ProjectBrave).FullName)" brave -import "$dll" -analysisTimeoutPerFile $(1 * 60 * 60) -max-cpu $($(Get-ComputerInfo -Property CsProcessors).CsProcessors.NumberOfCores * 2) -overwrite
         shell: pwsh
         timeout-minutes: 360
-        
+
+      - name: Create ghidra analysis artifact
+        uses: actions/upload-artifact@v2
+        if: always()
+        with:
+          name: ghidra_analysis
+          path: ProjectBrave/
+
+      - name: Create brave dll artifact
+        uses: actions/upload-artifact@v2
+        if: always()
+        with:
+          name: brave_dll
+          path: $env:BRAVE_DLL
+
+  continue-analysis-windows-x64:
+    runs-on: windows-latest
+    timeout-minutes: 1200
+    needs: start-analysis-windows-x64
+    steps:
+      - uses: actions/checkout@v2
+        timeout-minutes: 1
+
+      - name: Set up Python 3
+        uses: actions/setup-python@v2
+        timeout-minutes: 5
+        with:
+          python-version: 3.x
+
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Setup pypoetry cache
+        uses: actions/cache@v2
+        timeout-minutes: 5
+        with:
+          path: ~/AppData/Local/pypoetry/Cache
+          key: ${{ runner.os }}-pypoetry-${{ hashFiles('**/requirements.txt') }}${{ hashFiles('**/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-pypoetry-
+
+      - name: Install poetry & others
+        run: python -m pip install poetry requests wheel
+
+      - name: Run Poetry
+        run: |
+          python -m poetry install
+          python -m poetry run python generate_static_data.py
+          python -m poetry build
+
+      - name: Setup ghidra
+        run: |
+          Invoke-WebRequest "https://github.com/NationalSecurityAgency/ghidra/releases/download/Ghidra_10.0.4_build/ghidra_10.0.4_PUBLIC_20210928.zip" -OutFile "ghidra.zip"
+          Expand-Archive -LiteralPath "ghidra.zip" -DestinationPath .
+          Move-Item -Force -Path ghidra_*_PUBLIC -Destination ghidra
+        shell: pwsh
+        timeout-minutes: 5
+
+      - name: Install brave
+        run: |
+          Set-PSDebug -Trace 1
+          python -m poetry run python bravepatcher/cli.py download-brave BraveBrowserStandaloneSilentSetup.exe
+          Start-Process -Wait -FilePath BraveBrowserStandaloneSilentSetup.exe
+        shell: pwsh
+        timeout-minutes: 5
+
+      - name: Locate brave dll
+        run: |
+          $dll = Get-Childitem -Path "$env:LOCALAPPDATA/BraveSoftware" -Include chrome.dll -Recurse -ErrorAction SilentlyContinue | select -expand fullname
+          echo $dll
+          $v = (Get-Item $dll).VersionInfo.FileVersion
+          $mv = $v.Split(".")[0..2] | Join-String -Separator "."
+          echo "BRAVE_DLL=$dll" >> $env:GITHUB_ENV
+          echo "BRAVE_VERSION=$v" >> $env:GITHUB_ENV
+          echo "BRAVE_MAJOR_VERSION=$mv" >> $env:GITHUB_ENV
+        shell: pwsh
+        timeout-minutes: 5
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: ghidra_analysis
+      
+      - name: Display structure of downloaded files
+        run: ls -R
+        shell: pwsh
+
       - name: Continue Ghidra Analysis
         if: ${{ github.event_name != 'schedule' || env.ALREADY_ANALYSED != '1' }}
         run: |
           $dll = (Get-Item $env:BRAVE_DLL).FullName
-          ghidra/support/analyzeHeadless "$((Get-Item ProjectBrave).FullName)" brave -process chrome.dll -analysisTimeoutPerFile $(5 * 60 * 60) -max-cpu $($(Get-ComputerInfo -Property CsProcessors).CsProcessors.NumberOfCores) -overwrite
+          ghidra/support/analyzeHeadless "$((Get-Item ProjectBrave).FullName)" brave -process chrome.dll -analysisTimeoutPerFile $(5 * 60 * 60) -max-cpu $($(Get-ComputerInfo -Property CsProcessors).CsProcessors.NumberOfCores)
         shell: pwsh
-        timeout-minutes: 360
+        timeout-minutes: 350
 
       - name: Start Ghidra Script to extract patterns
         if: ${{ github.event_name != 'schedule' || env.ALREADY_ANALYSED != '1' }}
         run: |
           $env:EXTRACT_DIRECTORY = $((Get-Item "ProjectBrave").FullName)
           cp -Force scripts/extract_functions_patterns.py .
-          ghidra/support/analyzeHeadless "$((Get-Item ProjectBrave).FullName)" brave -process chrome.dll -noanalysis -overwrite -scriptPath "$((Get-Item .).FullName)" -postScript extract_functions_patterns.py
+          ghidra/support/analyzeHeadless "$((Get-Item ProjectBrave).FullName)" brave -process chrome.dll -noanalysis -scriptPath "$((Get-Item .).FullName)" -postScript extract_functions_patterns.py
         shell: pwsh
-        timeout-minutes: 360
-
-      - name: Create artifact
-        uses: actions/upload-artifact@v2
-        if: always()
-        with:
-          name: ghidra_analysis
-          path: ProjectBrave/
 
       - name: Create artifact for json file
         uses: actions/upload-artifact@v2
