--- a/.github/workflows/brave_analysis.yml
+++ b/.github/workflows/brave_analysis.yml
@@ -199,7 +199,7 @@ jobs:
         if: ${{ github.event_name != 'schedule' || env.ALREADY_ANALYSED != '1' }}
         run: |
           $dll = (Get-Item $env:BRAVE_DLL).FullName
-          ghidra/support/analyzeHeadless "$BRAVE_GHIDRA_WD" brave -process chrome.dll -analysisTimeoutPerFile $(5 * 60 * 60) -max-cpu $($(Get-ComputerInfo -Property CsProcessors).CsProcessors.NumberOfCores)
+          ghidra/support/analyzeHeadless "$((Get-Item ProjectBrave).FullName)" brave -process -analysisTimeoutPerFile $(5 * 60 * 60) -max-cpu $($(Get-ComputerInfo -Property CsProcessors).CsProcessors.NumberOfCores)
         shell: pwsh
         timeout-minutes: 350
 
@@ -208,7 +208,7 @@ jobs:
         run: |
           $env:EXTRACT_DIRECTORY = $((Get-Item "ProjectBrave").FullName)
           cp -Force scripts/extract_functions_patterns.py .
-          ghidra/support/analyzeHeadless "$((Get-Item ProjectBrave).FullName)" brave -process chrome.dll -noanalysis -scriptPath "$((Get-Item .).FullName)" -postScript extract_functions_patterns.py
+          ghidra/support/analyzeHeadless "$((Get-Item ProjectBrave).FullName)" brave -process -noanalysis -scriptPath "$((Get-Item .).FullName)" -postScript extract_functions_patterns.py
         shell: pwsh
 
       - name: Create artifact for json file
